<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="35dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="15dp">

            <!-- LOGIN Title -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAppearance="?attr/textAppearanceHeadlineMedium"
                android:textColor="@color/hading"
                android:textStyle="bold"
                android:layout_marginTop="30dp" />


            <!-- Email Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopStart="30dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/hading"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_password"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="@color/hading">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Forgot Password -->
            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/forget_your_password"
                android:textColor="@color/black"
                android:textSize="16sp" />



            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="20dp"
                app:cornerRadius="20dp"
                app:backgroundTint="@color/hading"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <!-- Create New Account -->
            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/create_new_account"
                android:textColor="@color/hading"
                android:textSize="17sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
